# OpenGeometry

./: .gitignore  AGENTS.md  BOOLEAN_OPERATIONS_README.md  CLAUDE.md  README.md  boolean-operations-demo.ts  developer.md  eslint.config.js  example-sweep.html  example_usage.md  llm.txt  llms-full.txt  llms.txt  mint.json  package-lock.json  package.json  rollup.config.js  test-sweep.html  test_triangulation.html  tsconfig.json  vite.config.js
main/opengeometry/: Cargo.toml  cad.md
main/opengeometry-export-io/: Cargo.toml  README.md
main/opengeometry-export-io/src/: ifc.rs  lib.rs  part21.rs  stl.rs
main/opengeometry/examples/: export_step_ifc_fixture.rs  offset_primitives.rs  pdf_camera_projection.rs  pdf_camera_projection_views.rs  pdf_export.rs  pdf_primitives_all.rs  scenegraph_projection.rs  scenegraph_projection_dump_json.rs  sphere_projection.rs  sweep_path_profile.rs  wall_from_polyline_offsets.rs
main/opengeometry/include/: opengeometry.h
main/opengeometry/sandbox-native/: Cargo.toml
main/opengeometry/sandbox-native/src/: main.rs
main/opengeometry/scripts/: validate_ifc_fixture.py
main/opengeometry/src/: c_api.rs  file_exporter.rs  lib.rs  scenegraph.rs  tolerance.rs  units.rs
main/opengeometry/src/booleans/: error.rs  mod.rs  planar.rs  rebuild.rs  solid.rs  types.rs
main/opengeometry/src/brep/: builder.rs  edge.rs  error.rs  face.rs  geometry.rs  halfedge.rs  loop.rs  mod.rs  shell.rs  validity.rs  vertex.rs  wire.rs
main/opengeometry/src/drawing/: mod.rs  primitives.rs  scene.rs
main/opengeometry/src/editor/: capabilities.rs  edits.rs  inspection.rs  mod.rs  tests.rs  types.rs  validation.rs
main/opengeometry/src/editor/edits/: edge_insert.rs  extrusion.rs  face_cut.rs  loop_cut.rs  topology.rs  translation.rs  vertex_remove.rs
main/opengeometry/src/export/: drawing.rs  dxf.rs  ifc.rs  mod.rs  part21.rs  pdf.rs  projection.rs  step.rs  stl.rs
main/opengeometry/src/freeform/: capabilities.rs  edits.rs  mod.rs  remap.rs  tests.rs  topology_display.rs  types.rs
main/opengeometry/src/geometry/: base-geometry.rs  baseflatmesh.rs  basegeometry.rs  basemesh.rs  basepolygon.rs  boolean2d.rs  geometry.md  geometrybuffer.rs  mesh.rs  mod.rs  offset2d.rs  offset_regions.rs  path.rs  poly2d.rs  triangle.rs
main/opengeometry/src/operations/: binary_tree.rs  boolean.rs  degenerate-test.rs  extrude.rs  graph.rs  intersect.rs  mod.rs  offset.rs  profile.rs  sweep.rs  triangulate.rs  triangulate_brep.rs  windingsort.rs
main/opengeometry/src/primitives/: arc.rs  circle.rs  cube.rs  cuboid.rs  curve.rs  cylinder.rs  cylinder2.rs  cylinderOld.rs  elliptical_arc.rs  line.rs  poly_line.rs  polygon.rs  polyline.rs  rectangle.rs  simple_line.rs  sphere.rs  sweep.rs  swept_shape.rs  wedge.rs
main/opengeometry/src/spatial/: placement.rs  workplane.rs
main/opengeometry/src/utility/: bgeometry.rs  geometry.rs  mod.rs  openmath.rs
main/opengeometry/tests/: analytic_geometry.rs  boolean_corpus.rs  occ_oracle.rs  primitives_smoke.rs  step_roundtrip_oracle.rs  validity_corpus.rs
(+346 files in other folders)
