[package]
name = "opengeometry"
version = "0.1.1"
authors = ["Vishwajeet Mane <manevishwajeet1@gmail.com>"]
description = "Graphics Kernel for Next Gen"
license = "MIT/Apache-2.0"
repository = "https://github.com/OpenGeometry-io/OpenGeometry"
edition = "2021"

[lib]
# rlib always; cdylib for wasm/FFI; staticlib for C/C++ integration
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
# Default: pure core, no wasm, no C API exports.
default = []
# Enable wasm bindings (wasm-bindgen + web specific deps)
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "web-sys"]
# Enable C ABI export helpers
c-api = []

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.4", optional = true }
serde_json = "1.0.127"
web-sys = { version = "0.3", features = ["console"], optional = true }
openmaths = "0.2.4"
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
earcutr = "=0.3.0"