[package]
name = "opengeometry"
version = "0.1.1"
authors = ["Vishwajeet Mane <manevishwajeet1@gmail.com>"]
description = "Graphics Kernel for Next Gen"
license = "MIT/Apache-2.0"
repository = "https://github.com/OpenGeometry-io/OpenGeometry"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.127"
web-sys = { version = "0.3", features = ["console"] }
openmaths = "0.2.4"
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }
earcutr = "=0.3.0"
dxf = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
printpdf = "0.5"
